[gd_scene load_steps=4 format=2]

[ext_resource path="res://events/event1/vase-1.png.png" type="Texture" id=1]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=2]
[ext_resource path="res://events/event1/vasesEvent.gd" type="Script" id=3]

[node name="vasesEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.694118, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vase-1png" type="Sprite" parent="."]
position = Vector2( 514.302, 473.682 )
scale = Vector2( 9, 9 )
texture = ExtResource( 1 )

[node name="vase-1png2" type="Sprite" parent="."]
position = Vector2( 208.718, 478.347 )
scale = Vector2( 9, 9 )
texture = ExtResource( 1 )

[node name="vase-1png3" type="Sprite" parent="."]
position = Vector2( 807.056, 464.351 )
scale = Vector2( 9, 9 )
texture = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.670588 )

[node name="Label" type="Label" parent="."]
margin_left = 52.5047
margin_top = 30.5028
margin_right = 358.505
margin_bottom = 152.503
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkelBunny" parent="." instance=ExtResource( 2 )]
position = Vector2( -122.193, 280.234 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Button1" type="Button" parent="."]
margin_left = 280.718
margin_top = 406.347
margin_right = 690.718
margin_bottom = 453.347
text = "BREAK THE ONE IN THE LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 280.718
margin_top = 468.962
margin_right = 690.718
margin_bottom = 515.962
text = "BREAK THE ONE IN THE MIDDLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 280.718
margin_top = 536.351
margin_right = 690.718
margin_bottom = 583.351
text = "BREAK THE ONE IN THE RIGHT"

[node name="Button4" type="Button" parent="."]
margin_left = 281.0
margin_top = 406.0
margin_right = 691.0
margin_bottom = 583.0
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
